<resources>

    <string name="app_name" translatable="false">Connect4</string>
    <!--activity_new_game_settings-->
    <string name="player_name">Player name</string>
    <string name="single_player">Single player</string>
    <string name="multi_player">Multi-player</string>
    <string name="ball_shape">Ball shape</string>
    <string name="game_sounds">In-game sounds</string>
    <string name="elapsed_time">Elapsed time</string>
    <string name="toggle_on">ON</string>
    <string name="toggle_off">OFF</string>
    <string name="guest_name">Guest Name</string>
    <string name="guest">Guest</string>
    <string name="draw">DRAW!!!!</string>
    <string name="wins">WINS!!!!</string>
    <string name="alert_back">PLEASE, USE THE APP BACK BUTTONS</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <!--activity_settings-->
    <string name="txtLanguage">Language</string>
    <string name="txtdark">Dark Mode</string>
    <string name="txtMusic">Music</string>
    <string name="txtSounds">Game Sounds</string>

    <string-array name="Spinlanguage">
        <item name="En">English</item>
        <item name="Fr">French</item>
        <item name="Sp">Spanish</item>
    </string-array>

    <string-array name="balls">
        <item name="Classic">Classic</item>
        <item name="Poker">Poker</item>


    </string-array>
    <!--activity_multiplayer-->
    <string name="activate_bluetooth">Activate bluetooth</string>

</resources>