<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusable="auto"
    tools:context=".NewGame_Settings">

    <ImageView
        android:id="@+id/load_game_board"
        android:layout_width="780dp"
        android:layout_height="580dp"
        android:background="@android:color/transparent"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394"
        app:srcCompat="@drawable/settings_board" />

    <ImageButton
        android:id="@+id/newgamehome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/load_game_board"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285"
        app:srcCompat="@drawable/home_button" />

    <ImageButton
        android:id="@+id/launchgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/load_game_board"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newgamehome"
        app:layout_constraintVertical_bias="0.21"
        app:srcCompat="@drawable/play" />

    <TextView
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/babycake"
        android:text="@string/player_name"
        android:textColor="#0B0B0B"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/load_game_board"
        app:layout_constraintEnd_toEndOf="@+id/load_game_board"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="@+id/load_game_board"
        app:layout_constraintTop_toTopOf="@+id/load_game_board"
        app:layout_constraintVertical_bias="0.198" />

    <EditText
        android:id="@+id/edit_playerName"
        android:layout_width="300sp"
        android:layout_height="68sp"
        android:ems="10"
        android:fontFamily="@font/babycake"
        android:inputType="textPersonName"
        android:text="Player_1"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/load_game_board"
        app:layout_constraintEnd_toEndOf="@+id/load_game_board"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toEndOf="@+id/player_name"
        app:layout_constraintTop_toTopOf="@+id/load_game_board"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/activate_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/babycake"
        android:text="@string/activate_bluetooth"
        android:textColor="#090909"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/load_game_board"
        app:layout_constraintEnd_toEndOf="@+id/load_game_board"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="@+id/load_game_board"
        app:layout_constraintTop_toBottomOf="@+id/player_name"
        app:layout_constraintVertical_bias="0.112" />

    <ToggleButton
        android:id="@+id/bluetooth_toggleButton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginEnd="120dp"
        android:autoText="false"
        android:background="@drawable/green_button"
        android:checked="true"
        android:cursorVisible="false"
        android:fontFamily="@font/babycake"
        android:freezesText="false"
        android:textOff="@string/toggle_off"
        android:textOn="@string/toggle_on"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/load_game_board"
        app:layout_constraintEnd_toEndOf="@+id/load_game_board"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/activate_bluetooth"
        app:layout_constraintTop_toTopOf="@+id/load_game_board"
        app:layout_constraintVertical_bias="0.384" />

</androidx.constraintlayout.widget.ConstraintLayout>